Feat contract definitions (#15)
* feat: create contractDefinition class

* feat: create contractDefinition.get method

* refactor: update ContractDefinitionsTest Container

* fix: fix ContractDefinitions error message